[Custom Trainer] Refactor thresholding (#1311)
* remove __future__

* Update changelog

* 🚚 Trainer -> AnomalibTrainer

* add post-processor

* Refactor callback

* Refactor normalization callback

* Refactor thresholding

* Match convention

* Refactor imports

* Address PR comments

* Fix path

* Refactor callbacks

* Fix module path

* Address PR comments

* Apply suggestions from code review

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

---------

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

--- a/src/anomalib/models/padim/config.yaml
+++ b/src/anomalib/models/padim/config.yaml
@@ -42,10 +42,7 @@ metrics:
   pixel:
     - F1Score
     - AUROC
-  threshold:
-    method: adaptive #options: [adaptive, manual]
-    manual_image: null
-    manual_pixel: null
+  threshold: F1AdaptiveThreshold
 
 visualization:
   show_images: False # show images on the screen
