Enable Ruff Rules - Part 6 (#1407)
* pyflakes

* pycodestyle

* pep8-naming (`N`)

* pyupgrade (`UP`)

* flake8-bandit (`S`)

* Enabled UP, ANN, S, BLE, FBT, B

* Fix typo

* Revert F1AdaptiveThreshold parent classes

* Fix some of the tests

* ignore boolean-positional-value-in-call (FBT003)

* Addressed pr comments

* Remove duplicated lines

* flake8-builtins (`A`) and flake8-commas (`COM`)

* flake8-comprehensions (`C4`)

* flake8-datatimez (`DTZ`), flake8-debugger (`T10`), flake8-errmsg (`EM`)

* flake8-pie (`PIE`)

* flake8-raise (`RSE`)

* flake8-return (`RET`)

* flake8-self (`SLF`)

* flake8-simplify (`SIM`)

* flake8-unsused-arguments (`ARG`)

* flake8-use-pathlib (`PTH`)

* eradicate (`ERA`)

* pylint (`PL`)

* tryceratos (`TRY`), flynt (`FLY`), Perflint (`PERF`)

* NumPy-specific rules (`NPY`)

* Ruff-specific rules (`RUF`)

* Remove pylint ignore comments

* Fix tests

* Fix tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,20 +50,20 @@ select = [
     "TCH",  # flake8-type-checking (`TCH`)
     "INT",  # flake8-gettext (`INT`)
     "ARG",  # flake8-unsused-arguments (`ARG`)
-    # "PTH",  # flake8-use-pathlib (`PTH`)
+    "PTH",  # flake8-use-pathlib (`PTH`)
     # "TD",   # flake8-todos (`TD`)
     # "FIX",  # flake8-fixme (`FIX`)
-    # "ERA",  # eradicate (`ERA`)
+    "ERA",  # eradicate (`ERA`)
     # "PD",   # pandas-vet (`PD`)
     # "PGH",  # pygrep-hooks (`PGH`)
-    # "PL",   # pylint (`PL`)
-    # "TRY",  # tryceratos (`TRY`)
-    # "FLY",  # flynt (`FLY`)
-    # "NPY",  # NumPy-specific rules (`NPY`)
-    # "PERF", # Perflint (`PERF`)
+    "PL",   # pylint (`PL`)
+    "TRY",  # tryceratos (`TRY`)
+    "FLY",  # flynt (`FLY`)
+    "NPY",  # NumPy-specific rules (`NPY`)
+    "PERF", # Perflint (`PERF`)
     # "FURB", # refurb (`FURB`)
     # "LOG",  # flake8-logging (`LOG`)
-    # "RUF",  # Ruff-specific rules (`RUF`)
+    "RUF",  # Ruff-specific rules (`RUF`)
 ]
 
 ignore = [
@@ -79,12 +79,12 @@ ignore = [
     # "D413", # Missing blank line after last section
     # "D418", # Methods decorated with @overload shouldn't contain a docstring
 
-    # # pylint
-    # "PLR0913",  # Too many arguments to function call
-    # "PLR2004",  # consider replacing with a constant variable
-    # "PLW2901",  # `for` loop variable `row` overwritten by assignment target
-    # "PLR0912",  # Too many branches
-    # "PLR0915",  # Too many statements
+    # pylint
+    "PLR0913",  # Too many arguments to function call
+    "PLR2004",  # consider replacing with a constant variable
+    "PLW2901",  # `for` loop variable `row` overwritten by assignment target
+    "PLR0912",  # Too many branches
+    "PLR0915",  # Too many statements
 
     # flake8-annotations
     # "ANN101",   # Missing-type-self
