--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ select = [
     "F",    # Pyflakes (`F`)
     "E",    # pycodestyle error (`E`)
     "W",    # pycodestyle warning (`W`)
-    # "C90",  # mccabe (`C90`)  - 1 issue
+    "C90",  # mccabe (`C90`)
     "I",    # isort (`I`)
     "N",    # pep8-naming (`N`)
     # "D",    # pydocstyle (`D`)
@@ -51,19 +51,19 @@ select = [
     "INT",  # flake8-gettext (`INT`)
     "ARG",  # flake8-unsused-arguments (`ARG`)
     "PTH",  # flake8-use-pathlib (`PTH`)
-    # "TD",   # flake8-todos (`TD`)
-    # "FIX",  # flake8-fixme (`FIX`)
+    "TD",   # flake8-todos (`TD`)
+    "FIX",  # flake8-fixme (`FIX`)
     "ERA",  # eradicate (`ERA`)
-    # "PD",   # pandas-vet (`PD`)
-    # "PGH",  # pygrep-hooks (`PGH`)
+    "PD",   # pandas-vet (`PD`)
+    "PGH",  # pygrep-hooks (`PGH`)
     "PL",   # pylint (`PL`)
     "TRY",  # tryceratos (`TRY`)
     "FLY",  # flynt (`FLY`)
     "NPY",  # NumPy-specific rules (`NPY`)
     "PERF", # Perflint (`PERF`)
+    "RUF",  # Ruff-specific rules (`RUF`)
     # "FURB", # refurb (`FURB`)
     # "LOG",  # flake8-logging (`LOG`)
-    "RUF",  # Ruff-specific rules (`RUF`)
 ]
 
 ignore = [
@@ -99,10 +99,13 @@ ignore = [
     "FBT002",   # Boolean default value in function definition
 
     # flake8-datatimez (`DTZ`)
-    "DTZ005"    # The use of `datetime.datetime.now()` without `tz` argument is not allowed
+    "DTZ005",    # The use of `datetime.datetime.now()` without `tz` argument is not allowed
 
     # flake8-type-checking
     # "TCH001",   # typing-only-first-party-import, Sometimes this causes an incorrect error.
+
+    # flake8-fixme (`FIX`)
+    "FIX002",    # Line contains TODO, consider resolving the issue
 ]
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
@@ -147,7 +150,7 @@ src = ["src", "tests"]
 
 [tool.ruff.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
-max-complexity = 10
+max-complexity = 15
 
 [tool.ruff.per-file-ignores]
 "tests/nightly/tools/benchmarking/test_benchmarking.py" = ["E402"]
