Enable Ruff Rules - Part 8 (#1412)
* pyflakes

* pycodestyle

* pep8-naming (`N`)

* pyupgrade (`UP`)

* flake8-bandit (`S`)

* Enabled UP, ANN, S, BLE, FBT, B

* Fix typo

* Revert F1AdaptiveThreshold parent classes

* Fix some of the tests

* ignore boolean-positional-value-in-call (FBT003)

* Addressed pr comments

* Remove duplicated lines

* flake8-builtins (`A`) and flake8-commas (`COM`)

* flake8-comprehensions (`C4`)

* flake8-datatimez (`DTZ`), flake8-debugger (`T10`), flake8-errmsg (`EM`)

* flake8-pie (`PIE`)

* flake8-raise (`RSE`)

* flake8-return (`RET`)

* flake8-self (`SLF`)

* flake8-simplify (`SIM`)

* flake8-unsused-arguments (`ARG`)

* flake8-use-pathlib (`PTH`)

* eradicate (`ERA`)

* pylint (`PL`)

* tryceratos (`TRY`), flynt (`FLY`), Perflint (`PERF`)

* NumPy-specific rules (`NPY`)

* Ruff-specific rules (`RUF`)

* Remove pylint ignore comments

* Fix tests

* Fix tests

* mccabe (`C90`)

* pygrep-hooks (`PGH`)

* flake8-todos (`TD`)

* flake8-fixme (`FIX`)

* pandas-vet (`PD`)

* ignore ANN101 ANN102 and ANN103

* Fix random_split tests

* Fix pre-commit

* ANN partly done

* Remove kwargs: Any

* flake8-annotations (`ANN`)

* Enabled tests

* Revert padim configs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ select = [
     # "D",    # pydocstyle (`D`)
     "UP",   # pyupgrade (`UP`)
     "YTT",  # flake8-2020 (`YTT`)
-    # "ANN",  # flake8-annotations (`ANN`)
+    "ANN",  # flake8-annotations (`ANN`)
     "S",    # flake8-bandit (`S`)
     "BLE",  # flake8-blind-except (`BLE`)
     "FBT",  # flake8-boolean-trap (`FBT`)
@@ -62,8 +62,8 @@ select = [
     "NPY",  # NumPy-specific rules (`NPY`)
     "PERF", # Perflint (`PERF`)
     "RUF",  # Ruff-specific rules (`RUF`)
-    # "FURB", # refurb (`FURB`)
-    # "LOG",  # flake8-logging (`LOG`)
+    # "FURB", # refurb (`FURB`) - ERROR: Unknown rule selector: `FURB`
+    # "LOG",  # flake8-logging (`LOG`) - ERROR: Unknown rule selector: `LOG`
 ]
 
 ignore = [
@@ -87,9 +87,9 @@ ignore = [
     "PLR0915",  # Too many statements
 
     # flake8-annotations
-    # "ANN101",   # Missing-type-self
-    # "ANN002",   # Missing type annotation for *args
-    # "ANN003",   # Missing type annotation for **kwargs
+    "ANN101",   # Missing-type-self
+    "ANN002",   # Missing type annotation for *args
+    "ANN003",   # Missing type annotation for **kwargs
 
     # flake8-bandit (`S`)
     "S101", # Use of assert detected.
