Add CLI Tests (#1426)
* Add new configs

* Add draem config

* Stash cli tests

* Stash cli tests with minor changes

* Stash changes

* Fix reverse distillation

* Fix EfficientAD

* Match ai_vad params to config params

* Fix ucsd and ai_vad configs

* Uncomment validation step

* Refactor directory structure

* Rename method

* use uscd for aivad

* fix ucsd path + modify model checkpoint callback for tests

* fix dfkde config

* Restructure tests + fix normalization test

* Revert file

* add v1 to tox

* Skip testing ai_vad

* Increase train and test size

* use mvtec dataset

---------

Co-authored-by: Ashwin Vaidya <ashwinitinvaidya@gmail.com>

--- a/src/configs/model/reverse_distillation.yaml
+++ b/src/configs/model/reverse_distillation.yaml
@@ -6,7 +6,7 @@ model:
       - layer1
       - layer2
       - layer3
-    anomaly_map_mode: MULTIPLY
+    anomaly_map_mode: ADD
     pre_trained: true
 
 metrics:
@@ -14,10 +14,11 @@ metrics:
     - AUROC
 
 trainer:
-  max_epochs: 200
   callbacks:
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
         patience: 3
         monitor: pixel_AUROC
         mode: max
+  check_val_every_n_epoch: 200
+  max_epochs: 200
