--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ deps =
 
 commands =
     ; 1. Run Coverage First.
-    pytest tests/pre_merge \
+    pytest tests/pre_merge tests/v1 \
         --cov=anomalib \
         --cov-report=xml:{toxworkdir}/coverage.xml \
         --cov-fail-under=50 \
