--- a/src/configs/data/ucsd_ped.yaml
+++ b/src/configs/data/ucsd_ped.yaml
@@ -1,15 +1,15 @@
 class_path: anomalib.data.UCSDped
 init_args:
-  root: "./datasets/uscd"
+  root: "./datasets/ucsd"
   category: "UCSDped2"
-  clip_length_in_frames: 1
-  frames_between_clips: 1
+  clip_length_in_frames: 2
+  frames_between_clips: 10
   target_frame: LAST
   image_size: [256, 256]
   center_crop: null
   normalization: imagenet
-  train_batch_size: 32
-  eval_batch_size: 32
+  train_batch_size: 8
+  eval_batch_size: 1
   num_workers: 8
   transform_config_train: null
   transform_config_eval: null
