Restructure test directories. (#1438)
* Restructured the test directories

* Fixed typo

* Fix imports

* Fix config path in export tests

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ deps =
 
 commands =
     ; 1. Run Coverage First.
-    pytest tests/pre_merge tests/v1 \
+    pytest tests/legacy/pre_merge tests/unit tests/integration \
         --cov=anomalib \
         --cov-report=xml:{toxworkdir}/coverage.xml \
         --cov-fail-under=50 \
@@ -62,7 +62,7 @@ deps =
     -r{toxinidir}/requirements/notebooks.txt
 commands =
     coverage erase
-    coverage run --include=anomalib/* -m pytest tests/nightly/
+    coverage run --include=anomalib/* -m pytest tests/legacy/nightly/
     coverage report -m --fail-under=33
     coverage xml -o {toxworkdir}/coverage.xml
 
