Add ruff checks to tests (#1455)
* Fix tests + add ruff check to tests

* Limit gradio version

* Path->str

---------

Co-authored-by: Ashwin Vaidya <ashwinitinvaidya@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     rev: "v0.1.2"
     hooks:
       - id: ruff
-        exclude: "tests"
+        exclude: "tests/legacy"
         args: ["--fix"]
 
   # python static type checking
