--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ isolated_build = True
 skip_missing_interpreters = true
 envlist =
     pre-commit
-    pre_merge
+    pre-merge-py{38,39,310}
     nightly
     snyk-scan
 
