Remove configurable parameters (#1453)
* Refactor export

* Fix entrypoint tests

* remove match statements

* Fix tests + remove get_configurable_params + fix hpo,benchmarking

* Path->str

* Update src/anomalib/models/__init__.py

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

* Update src/anomalib/utils/sweep/config.py

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

* Update tools/inference/README.md

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

* Update tools/inference/README.md

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

* str->Path

* str->Path

* Fix model checkpoint path

* typing + path + test order

* Update src/anomalib/utils/sweep/config.py

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

* Mark tests as xfail

* Fix notebook

---------

Co-authored-by: Ashwin Vaidya <ashwinitinvaidya@gmail.com>
Co-authored-by: Dick Ameln <amelndjd@gmail.com>
Co-authored-by: Samet Akcay <samet.akcay@intel.com>

--- a/tools/benchmarking/benchmark_params.yaml
+++ b/tools/benchmarking/benchmark_params.yaml
@@ -8,23 +8,25 @@ writer:
   - tensorboard
 grid_search:
   data:
-    category:
-      - bottle
-      - cable
-      - capsule
-      - carpet
-      - grid
-      - hazelnut
-      - leather
-      - metal_nut
-      - pill
-      - screw
-      - tile
-      - toothbrush
-      - transistor
-      - wood
-      - zipper
-    image_size: [224]
+    class_path: anomalib.data.MVTec
+    init_args:
+      category:
+        - bottle
+        - cable
+        - capsule
+        - carpet
+        - grid
+        - hazelnut
+        - leather
+        - metal_nut
+        - pill
+        - screw
+        - tile
+        - toothbrush
+        - transistor
+        - wood
+        - zipper
+      image_size: [224]
   model_name:
     - padim
     - patchcore
