--- a/tools/hpo/configs/comet.yaml
+++ b/tools/hpo/configs/comet.yaml
@@ -4,12 +4,16 @@ spec:
   metric: "image_F1Score"
   objective: "maximize"
 parameters:
-  dataset:
-    category: capsule
-    image_size:
-      type: discrete
-      values: [128, 256]
+  data:
+    class_path: anomalib.data.MVTec
+    init_args:
+      category: capsule
+      image_size:
+        type: discrete
+        values: [128, 256]
   model:
-    backbone:
-      type: categorical
-      values: ["resnet18", "wide_resnet50_2"]
+    class_path: anomalib.models.Padim
+    init_args:
+      backbone:
+        type: categorical
+        values: ["resnet18", "wide_resnet50_2"]
