--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ deps =
 
 commands =
     ; 1. Run Coverage First.
-    pytest tests/legacy/pre_merge tests/unit tests/integration \
+    pytest tests/integration tests/legacy/pre_merge tests/unit \
         --cov=anomalib \
         --cov-report=xml:{toxworkdir}/coverage.xml \
         --cov-fail-under=50 \
