Partially migrate unit tests Part 3 (#1480)
* Refactor CLI tests

* Add api tests

* Select a random model

* Fix test for all the models

* Fix API tests

* refactor pre-post processing + get model ckpt from fixture

* Add tests for custom transforms

* Address PR comments

* Refactor ckpt_path fixture

* Update conftest.py

* Update __init__.py

* Update __init__.py

---------

Co-authored-by: Ashwin Vaidya <ashwinitinvaidya@gmail.com>
Co-authored-by: Samet Akcay <samet.akcay@intel.com>

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ deps =
 
 commands =
     ; 1. Run Coverage First.
-    pytest tests/integration tests/legacy/pre_merge tests/unit \
+    pytest tests/integration tests/unit \
         --cov=anomalib \
         --cov-report=xml:{toxworkdir}/coverage.xml \
         --cov-fail-under=50 \
