--- a/tests/unit/callbacks/metrics_configuration_callback/data/config-good-00.yaml
+++ b/tests/unit/callbacks/metrics_configuration_callback/data/config-good-00.yaml
@@ -4,16 +4,10 @@ metrics:
       class_path: torchmetrics.F1Score
       init_args:
         compute_on_cpu: true
-    AUPRO:
-      class_path: anomalib.metrics.AUPRO
-      init_args:
-        compute_on_cpu: true
-  image:
-    F1Score:
-      class_path: torchmetrics.F1Score
-      init_args:
-        compute_on_cpu: true
     AUROC:
       class_path: anomalib.metrics.AUROC
       init_args:
         compute_on_cpu: true
+  image:
+    - F1Score
+    - AUROC
