--- a/tests/unit/callbacks/metrics_configuration_callback/data/config-good-01.yaml
+++ b/tests/unit/callbacks/metrics_configuration_callback/data/config-good-01.yaml
@@ -1,13 +1,7 @@
 metrics:
   pixel:
-    F1Score:
-      class_path: torchmetrics.F1Score
-      init_args:
-        compute_on_cpu: true
-    AUPRO:
-      class_path: anomalib.metrics.AUPRO
-      init_args:
-        compute_on_cpu: true
+    - F1Score
+    - AUROC
   image:
     F1Score:
       class_path: torchmetrics.F1Score
